--- a/style.css
+++ b/style.css
@@ -39,15 +39,30 @@ nav ol li a{
     height: 100vh;
     background-image: url(./img/event.jpeg);
     background-size: cover;
+    margin-top: -120px;
 }
 
 section h1{
 color: yellow;
 font-size: 32px;
 text-align: center;
+padding: 50px 0;
 }
 
 #month, #partner{
     width: 1000px;
     margin: 0 auto;
+}
+
+#partner li{
+    margin-left: 20px;
+    padding: 10px 0;
+}
+
+footer{
+    background: yellow;
+    color: #ffffff;
+    padding: 50px 0;
+    text-align: center;
+    margin-top: 150px;
 }
