--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ nav{
     justify-content: space-between;
     padding: 20px;
     position: sticky;
-top: 0%;
-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-height: 120px;
+    top: 0%;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+    height: 120px;
+    z-index:  1;
 }
 
 #logo img{
@@ -21,13 +22,18 @@ width: 80px;
 background: #fff;
 border-radius: 50%;
 padding: 10px;
+transition: 1s;
 }
 
 nav ol li{
     display: inline-block;
     padding: 30px;
+    transition: 0.7s;
 }
 
+nav ol lo:hover{
+    transform: scale(1.3)
+}
 nav ol li a{
     text-decoration: none;
     color: #fff;
@@ -40,6 +46,11 @@ nav ol li a{
     background-image: url(./img/event.jpeg);
     background-size: cover;
     margin-top: -120px;
+    transition:2s;
+}
+
+#banner:hover{
+    transform:scale(1.15);
 }
 
 section h1{
