--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ nav{
     top: 0%;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
     height: 120px;
-    z-index:  1;
+    z-index:1;
 }
 
 #logo img{
@@ -31,7 +31,7 @@ nav ol li{
     transition: 0.7s;
 }
 
-nav ol lo:hover{
+nav ol li:hover{
     transform: scale(1.3)
 }
 nav ol li a{
